--- a/src/client/stylesheets/components/_defra-search.scss
+++ b/src/client/stylesheets/components/_defra-search.scss
@@ -31,7 +31,7 @@
   }
 
   &::placeholder {
-    color: #505a5f;
+    color: #0b0c0c;
   }
 }
 
@@ -79,7 +79,7 @@
 }
 
 .defra-header-search__wrapper .autocomplete__option--no-results {
-  color: #505a5f;
+  color: #0b0c0c;
   font-style: italic;
   cursor: default;
 
@@ -98,7 +98,7 @@
 .defra-search-suggestion__section {
   display: block;
   font-size: 14px;
-  color: #505a5f;
+  color: #0b0c0c;
   margin-top: 2px;
 }
 
@@ -147,6 +147,6 @@
 }
 
 .defra-search-results__section {
-  color: #505a5f;
+  color: #0b0c0c;
   margin-bottom: 10px;
 }
